Fix vertical alignment on cincinnati page

--- a/wedding.css
+++ b/wedding.css
@@ -66,6 +66,8 @@ a {
   height: 68px;
 }
 
+@media(min-width:64em) {
 .card {
-  height: 400px;
+    height: 515px;
+  }
 }
